Update privacy modal message and add script tag

--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cat Quiz</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
 <h1>Can your choice in cats reveal where you live?</h1>
 
 <!-- Privacy Modal -->
@@ -13,7 +23,7 @@
       Everything runs in your browser only.
     </p>
     <p>
-      <strong>Your browser may show a warning — that's normal. Just click continue</strong>
+      Your browser may show a warning — that's normal. 
       You can inspect this code to verify 🙂
     </p>
     <button id="acceptPrivacy">I understand</button>
@@ -39,3 +49,7 @@
 <p id="credits" style="margin-top: 30px; font-size: 14px;">
   Inspired by <a href="https://www.geokitten.com/" target="_blank">GeoKitten</a>
 </p>
+
+<script src="script.js"></script>
+</body>
+</html>
